@@ -1,6 +1,7 @@
 package com.symphony;
 
 import lombok.extern.log4j.Log4j2;
+
 import java.io.IOException;
 import java.nio.file.*;
 import java.util.*;
@@ -21,13 +22,18 @@ public class Translator {
     }
 
     public void process() throws IOException {
-        configuration.load();
+        try {
+            configuration.load();
+        } catch (IOException e) {
+            log.error("Failed to load configuration files", e);
+            return;
+        }
 
         List<Path> dataFiles;
         try (Stream<Path> paths = Files.list(Paths.get(folderPath))) {
             dataFiles = paths
                     .filter(path -> path.getFileName().toString().startsWith("dataFile") && path.toString().endsWith(".tsv"))
-                    .toList();
+                    .collect(Collectors.toList());
         }
 
         if (dataFiles.isEmpty()) {
@@ -35,8 +41,11 @@ public class Translator {
             return;
         }
 
-        for (Path dataFile : dataFiles) {
-            FileUtils.checkFileExists(dataFile);
+        dataFiles.sort(Comparator.comparingInt(this::extractFileNumber));
+
+        List<Integer> missingFiles = findMissingFiles(dataFiles);
+        if (!missingFiles.isEmpty()) {
+            missingFiles.forEach(missingFile -> System.err.println("Missing data file: dataFile" + missingFile + ".tsv"));
         }
 
         try (ExecutorService executorService = Executors.newFixedThreadPool(Runtime.getRuntime().availableProcessors())) {
@@ -47,14 +56,42 @@ public class Translator {
             }
 
             for (Future<Void> future : futures) {
-                future.get();
+                try {
+                    future.get();
+                } catch (ExecutionException | InterruptedException e) {
+                    log.error("An error occurred while processing a data file", e);
+                    statistics.incrementFailedFiles();
+                    Thread.currentThread().interrupt(); // Restore interrupted state
+                }
             }
-        } catch (Exception e) {
-            log.error("An error occurred while processing data files", e);
         }
 
         // Generate statistics
         generateStatistics();
+    }
+
+    private int extractFileNumber(Path path) {
+        String fileName = path.getFileName().toString();
+        String numberPart = fileName.replaceAll("[^0-9]", "");
+        return numberPart.isEmpty() ? -1 : Integer.parseInt(numberPart);
+    }
+
+    private List<Integer> findMissingFiles(List<Path> dataFiles) {
+        List<Integer> fileNumbers = dataFiles.stream()
+                .map(this::extractFileNumber)
+                .filter(number -> number != -1)
+                .sorted()
+                .toList();
+
+        List<Integer> missingFiles = new ArrayList<>();
+        for (int i = 0; i < fileNumbers.size() - 1; i++) {
+            int current = fileNumbers.get(i);
+            int next = fileNumbers.get(i + 1);
+            for (int j = current + 1; j < next; j++) {
+                missingFiles.add(j);
+            }
+        }
+        return missingFiles;
     }
 
     private void generateStatistics() {
